# nku-compiler-2024-rs

./: .gitignore  Cargo.toml  README.md  build.rs  cfg.dot  combined_cfg.dot  ir.ll  output.s  run.sh  test  test.s  test.sh
src/: frontend.rs  infra.rs  ir.rs  lib.rs  main.rs  sysy.lalrpop  test.sy  utils.rs
src/frontend/: ast.rs  irgen.rs  parse.rs  preprocess.rs  symbol_table.rs  sysy.lalrpop  type.rs  types.rs
src/infra/: linked_list.rs  storage.rs
src/ir/: block.rs  context.rs  def_use.rs  func.rs  global.rs  inst.rs  ty.rs  value.rs
src/ir/passes/: dce.rs  mod.rs
src/utils/: cfg.rs  dfs.rs
tests/bench/: evaluate.py  ir.sh
tests/bench/output/: result.md
tests/sysy/: basic.sy
tests/sysy-runtime-lib/: sylib.c  sylib.h
tests/testcase/functional_test/Advanced/: rbtree_in_segtree.sy
tests/testcase/functional_test/Basic/: mvn.sy
tests/testcase/optimize_test/basic_mem2reg/: noloadstore.sy
