[package]
name = "nkucc"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[dependencies]
thiserror = "1.0.61"

hexponent = { version = "0.3.1", optional = true }
lalrpop-util = { version = "0.20.2", features = ["lexer"], optional = true }

[build-dependencies]
lalrpop = "0.20.2"

[features]
default = [
    "target-riscv64",
    "frontend-sysy",  # comment this if its too slow to compile
    "hexponent"
]

target-riscv64 = []

frontend-sysy = ["dep:lalrpop-util"]
